<resources>
    <string name="app_name">MockupsMaterial</string>
    <string name="Ninja">Ninja Web</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="correo">Email</string>
    <string name="contraseña">Password</string>
    <string name="repite">Confirm Password</string>
    <string name="num">Telephone</string>
    <string name="forgot">Forgot your password</string>
    <string name="count">Sign in</string>
    <string name="img">img</string>
    <string name="font">Fher 8a</string>
    <string name="title_activity_form">form</string>
    <string name="first">First Name   </string>
    <string name="last">Last Name</string>
    <string name="celular">5555555555</string>
    <string name="label">Create Account</string>
    <string name="registrar">Register</string>
    <string name="iniciar">Login</string>
    <string name="pasaractividad">pasar actividad</string>
    <string name="home">Holi :3</string>
    <string name="title_activity_form_activity">Form_activity</string>
    <string name="title_activity_home">Home</string>
    <string name="descr">description</string>
</resources>
