<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul03"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.fernandaochoa.mockupsmaterial.Home">
    <include layout="@layout/toolbar"/>

    <FrameLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/fondo"
            android:background="@color/azul01"
            />


    </FrameLayout>

    <RelativeLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".3"
        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textColor="@color/blanco"
            android:textSize="@dimen/large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="47dp"
            android:text="@string/last"
            android:textColor="@color/blanco"
            android:textSize="@dimen/large"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etd_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_name"
            android:textColor="@color/blanco"
            android:textSize="@dimen/large" />

        <EditText
            android:id="@+id/edt_las"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_last"
            android:layout_below="@+id/tv_last"
            android:textColor="@color/blanco"
            android:textSize="@dimen/large" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:padding="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large" />

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num"
        android:padding="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large" />

    <EditText
        android:id="@+id/edt_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/blanco"
        android:textSize="@dimen/large" />

</LinearLayout>
